Fix back button error on mobile where it stretched entire width of screen.

--- a/src/styles.css
+++ b/src/styles.css
@@ -195,10 +195,16 @@ input[type='number'] {
 /* ---------- Responsiveness ---------- */
 /* ------------------------------------ */
 @media (max-width: 600px) {
-	.prev-btn,
+	.prev-btn {
+		bottom: 1rem;
+		left: 1rem;
+		right: auto;
+		padding: 0.6rem 1.25rem;
+	}
 	.next-btn {
 		bottom: 1rem;
 		right: 1rem;
+		left: auto;
 		padding: 0.6rem 1.25rem;
 	}
 	.start-description {
